Fixed Figma iframe width expending on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -413,6 +413,10 @@ h1 {
   align-items: baseline;
 }
 
+iframe {
+  max-width: 100%;
+}
+
 .video-iframe {
   width: 100%;
   height: 315px;
